focus/hover for font-weights

--- a/src/pages/docs/font-variant-numeric.mdx
+++ b/src/pages/docs/font-variant-numeric.mdx
@@ -31,7 +31,7 @@ Use the `font-variant-numeric` utilities to enable additional glyphs for numbers
 These utilities are composable so you can enable multiple `font-variant-numeric` features by combining multiple classes in your HTML:
 
 ```html
-<p class="ordinal slashed-zero tabular-nums ...">1234567890</p>
+<p class="**ordinal slashed-zero tabular-nums** ...">1234567890</p>
 ```
 
 Note that many fonts don't support these features *(stacked fractions support for example is especially rare)*, so some of these utilities may have no effect depending on the font family you are using.
@@ -40,12 +40,12 @@ Note that many fonts don't support these features *(stacked fractions support fo
 
 Use the `ordinal` utility to enable special glyphs for the ordinal markers.
 
-```html
+```html emerald
 <template preview>
-  <p class="font-source ordinal text-xl text-center text-gray-800">1st</p>
+  <p class="font-source ordinal text-3xl text-center text-emerald-600">1st</p>
 </template>
 
-<p class="ordinal ...">1st</p>
+<p class="**ordinal** ...">1st</p>
 ```
 
 
@@ -53,92 +53,92 @@ Use the `ordinal` utility to enable special glyphs for the ordinal markers.
 
 Use the `slashed-zero` utility to force a 0 with a slash; this is useful when a clear distinction between O and 0 is needed.
 
-```html
+```html lightBlue
 <template preview>
-  <p class="font-source slashed-zero text-xl text-center text-gray-800">0</p>
+  <p class="font-source slashed-zero text-3xl text-center text-light-blue-600">0</p>
 </template>
 
-<p class="slashed-zero ...">0</p>
+<p class="**slashed-zero** ...">0</p>
 ```
 
 ### Lining figures
 
 Use the `lining-nums` utility to use the numeric glyphs that are all aligned by their baseline. This corresponds to the `lnum` OpenType feature. This is the default for most fonts.
 
-```html
+```html rose
 <template preview>
-  <p class="font-source lining-nums text-xl text-center text-gray-800">1234567890</p>
+  <p class="font-source lining-nums text-3xl text-center text-rose-600">1234567890</p>
 </template>
 
-<p class="lining-nums ...">1234567890</p>
+<p class="**lining-nums** ...">1234567890</p>
 ```
 
 ### Oldstyle figures
 
 Use the `oldstyle-nums` utility to use numeric glyphs where some numbers have descenders. This corresponds to the `onum` OpenType feature.
 
-```html
+```html fuchsia
 <template preview>
-  <p class="font-source oldstyle-nums text-xl text-center text-gray-800">1234567890</p>
+  <p class="font-source oldstyle-nums text-3xl text-center text-fuchsia-600">1234567890</p>
 </template>
 
-<p class="oldstyle-nums ...">1234567890</p>
+<p class="**oldstyle-nums** ...">1234567890</p>
 ```
 
 ### Proportional figures
 
 Use the `proportional-nums` utility to use numeric glyphs that have proportional widths (rather than uniform/tabular). This corresponds to the `pnum` OpenType feature.
 
-```html
+```html indigo
 <template preview>
   <div class="max-w-sm text-right">
-    <p class="font-source proportional-nums text-xl text-gray-800">12121</p>
-    <p class="font-source proportional-nums text-xl text-gray-800">90909</p>
+    <p class="font-source proportional-nums text-3xl text-indigo-600">12121</p>
+    <p class="font-source proportional-nums text-3xl text-indigo-600">90909</p>
   </div>
 </template>
 
-<p class="proportional-nums ...">12121</p>
-<p class="proportional-nums ...">90909</p>
+<p class="**proportional-nums** ...">12121</p>
+<p class="**proportional-nums** ...">90909</p>
 ```
 
 ### Tabular figures
 
 Use the `tabular-nums` utility to use numeric glyphs that have uniform/tabular widths (rather than proportional). This corresponds to the `tnum` OpenType feature.
 
-```html
+```html amber
 <template preview>
   <div class="max-w-sm text-right">
-    <p class="font-source tabular-nums text-xl text-gray-800">12121</p>
-    <p class="font-source tabular-nums text-xl text-gray-800">90909</p>
+    <p class="font-source tabular-nums text-3xl text-amber-600">12121</p>
+    <p class="font-source tabular-nums text-3xl text-amber-600">90909</p>
   </div>
 </template>
 
-<p class="tabular-nums ...">12121</p>
-<p class="tabular-nums ...">90909</p>
+<p class="**tabular-nums** ...">12121</p>
+<p class="**tabular-nums** ...">90909</p>
 ```
 
 ### Diagonal fractions
 
 Use the `diagonal-fractions` utility to replace numbers separated by a slash with common diagonal fractions. This corresponds to the `frac` OpenType feature.
 
-```html
+```html emerald
 <template preview>
-  <p class="font-source diagonal-fractions text-xl text-center text-gray-800">1/2 3/4 5/6</p>
+  <p class="font-source diagonal-fractions text-3xl text-center text-emerald-600">1/2 3/4 5/6</p>
 </template>
 
-<p class="diagonal-fractions ...">1/2 3/4 5/6</p>
+<p class="**diagonal-fractions** ...">1/2 3/4 5/6</p>
 ```
 
 ### Stacked fractions
 
 Use the `stacked-fractions` utility to replace numbers separated by a slash with common stacked fractions. This corresponds to the `frac` OpenType feature. Very few fonts seem to support this feature — we've used Ubuntu Mono here.
 
-```html
+```html lightBlue
 <template preview>
-  <p class="font-ubuntu-mono stacked-fractions text-xl text-center text-gray-800">1/2 3/4 5/6</p>
+  <p class="font-ubuntu-mono stacked-fractions text-3xl text-center text-light-blue-600">1/2 3/4 5/6</p>
 </template>
 
-<p class="stacked-fractions ...">1/2 3/4 5/6</p>
+<p class="**stacked-fractions** ...">1/2 3/4 5/6</p>
 ```
 
 
@@ -147,7 +147,7 @@ Use the `stacked-fractions` utility to replace numbers separated by a slash with
 Use the `normal-nums` propery to reset numeric font variants. This is usually useful for resetting a font feature at a particular breakpoint:
 
 ```html
-<p class="slashed-zero tabular-nums md:normal-nums ...">12345</p>
+<p class="slashed-zero tabular-nums **md:normal-nums** ...">12345</p>
 ```
 
 ## Responsive
@@ -155,7 +155,7 @@ Use the `normal-nums` propery to reset numeric font variants. This is usually us
 To control `font-variant-numeric` property of an element at a specific breakpoint, add a `{screen}:` prefix to any existing `font-variant-numeric` utility. For example, use `md:tabular-nums` to apply the `tabular-nums` utility at only medium screen sizes and above.
 
 ```html
-<div class="proportional-nums md:tabular-nums">
+<div class="proportional-nums **md:tabular-nums**">
   <!-- ... -->
 </div>
 ```
