text-transform examples

--- a/src/pages/docs/text-transform.mdx
+++ b/src/pages/docs/text-transform.mdx
@@ -18,48 +18,48 @@ export const classes = { plugin }
 
 Use the `normal-case` utility to preserve the original casing. This is typically used to reset capitalization at different breakpoints.
 
-```html
+```html emerald
 <template preview>
-  <p class="normal-case text-lg text-gray-800">The quick brown fox jumped over the lazy dog.</p>
+  <p class="normal-case text-xl text-emerald-600 lg:text-2xl">The quick brown fox jumped over the lazy dog.</p>
 </template>
 
-<p class="normal-case ...">The quick brown fox ...</p>
+<p class="**normal-case** ...">The quick brown fox ...</p>
 ```
 
 ## Uppercase
 
 Use the `uppercase` utility to uppercase text.
 
-```html
+```html purple
 <template preview>
-  <p class="uppercase text-lg text-gray-800">The quick brown fox jumped over the lazy dog.</p>
+  <p class="uppercase text-xl text-purple-600 lg:text-2xl">The quick brown fox jumped over the lazy dog.</p>
 </template>
 
-<p class="uppercase ...">The quick brown fox ...</p>
+<p class="**uppercase** ...">The quick brown fox ...</p>
 ```
 
 ## Lowercase
 
 Use the `lowercase` utility to lowercase text.
 
-```html
+```html rose
 <template preview>
-  <p class="lowercase text-lg text-gray-800">The quick brown fox jumped over the lazy dog.</p>
+  <p class="lowercase text-xl text-rose-600 lg:text-2xl">The quick brown fox jumped over the lazy dog.</p>
 </template>
 
-<p class="lowercase ...">The quick brown fox ...</p>
+<p class="**lowercase** ...">The quick brown fox ...</p>
 ```
 
 ## Capitalize
 
 Use the `capitalize` utility to capitalize text.
 
-```html
+```html fuchsia
 <template preview>
-  <p class="capitalize text-lg text-gray-800">The quick brown fox jumped over the lazy dog.</p>
+  <p class="capitalize text-xl text-fuchsia-600 lg:text-2xl">The quick brown fox jumped over the lazy dog.</p>
 </template>
 
-<p class="capitalize ...">The quick brown fox ...</p>
+<p class="**capitalize** ...">The quick brown fox ...</p>
 ```
 
 ## Responsive
